Remove code that is deprecated in Java9